--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,7 +36,8 @@ jobs:
           sudo apt-get install trivy -y
           
       - name: Trivy Fs  Scan
-        run: trivy fs --fromat table -o fs-report.json .
+        run: | 
+          trivy fs --fromat table -o fs-report.json .
 
       - name: Gitleaks Installation
         run: sudo apt install gitleaks -y
