--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,10 +37,12 @@ jobs:
           
       - name: Trivy Fs  Scan
         run: | 
-          trivy fs --fromat table -o fs-report.json .
+          trivy fs --format table -o
+          fs-report.json .
 
       - name: Gitleaks Installation
         run: sudo apt install gitleaks -y
 
-      - name: Gitleaks cod scan
-        run: gitleaks detect sourse . -r gitleaks-report.json -f json
+      - name: Gitleaks code Scan
+        run: gitleaks detect sourse . --report
+            gitleaks-report.json -f json
