--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,9 +36,7 @@ jobs:
           sudo apt-get install trivy -y
           
       - name: Trivy Fs  Scan
-        run: | 
-          trivy fs --format table -o
-          fs-report.json .
+        run: trivy fs --format table -o fs-report.json .
 
       - name: Gitleaks Installation
         run: sudo apt install gitleaks -y
@@ -46,3 +44,9 @@ jobs:
       - name: Gitleaks code Scan
         run: gitleaks detect sourse . --report
             gitleaks-report.json -f json
+
+      - name: Upload JAR file
+        uses: actions/upload-artifact@v4
+        with:
+          name: Trivy-App-Jar
+          path: target/*.jar
