--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,8 +42,8 @@ jobs:
         run: sudo apt install gitleaks -y
 
       - name: Gitleaks code Scan
-        run: gitleaks detect sourse . --report
-            gitleaks-report.json -f json
+        run: gitleaks detect --sourse . --report
+             gitleaks-report.json -f json
 
       - name: Upload JAR file
         uses: actions/upload-artifact@v4
