--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,11 +39,10 @@ jobs:
         run: trivy fs --format table -o fs-report.json .
 
       - name: Gitleaks Installation
-        run: sudo apt install gitleaks -y
+        run: sudo apt install gitleaks=7.6.1 -y
 
       - name: Gitleaks code Scan
-        run: gitleaks detect --sourse . --report
-             gitleaks-report.json -f json
+        run: gitleaks detect . --report=gitleaks-report.json --format=json
 
       - name: Upload JAR file
         uses: actions/upload-artifact@v4
