--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,7 +39,7 @@ jobs:
         run: trivy fs --format table -o fs-report.json .
 
       - name: Gitleaks Installation
-        run: sudo apt install gitleaks=7.6.1 -y
+        run: sudo apt install gitleaks -y
 
       - name: Gitleaks code Scan
         run: gitleaks detect . --report=gitleaks-report.json --format=json
