--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,7 +42,7 @@ jobs:
         run: sudo apt install gitleaks -y
 
       - name: Gitleaks code Scan
-        run: gitleaks detect . --report-path=gitleaks-report.json --format=json
+        run: gitleaks detect . --report-path=gitleaks-report.json -f=json
 
       - name: Upload JAR file
         uses: actions/upload-artifact@v4
