--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -43,7 +43,10 @@ jobs:
 
       - name: Gitleaks code Scan
         run: gitleaks detect . --report-path=gitleaks-report.json -f=json
-
+      
+      - name: Build with Maven
+        run: mvn clean package --batch-mode
+        
       - name: Upload JAR file
         uses: actions/upload-artifact@v4
         with:
